[gd_scene load_steps=7 format=2]

[ext_resource path="res://shmup/niveaux/niveau2.gd" type="Script" id=1]
[ext_resource path="res://shmup/ennemies/trash.tscn" type="PackedScene" id=2]
[ext_resource path="res://shmup/ennemies/trash2.tscn" type="PackedScene" id=3]
[ext_resource path="res://shmup/images/background synthwave.jpg" type="Texture" id=4]
[ext_resource path="res://shmup/player/Player.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.55011, -2.09686, 0, 0, 0, 0, 801.957, 2.09064 )
}

[node name="Niveau2" type="Node" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
trash = ExtResource( 2 )
trash2 = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Player" parent="." index="1" instance=ExtResource( 5 )]

[node name="TimerMob" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerStylePoubelle" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="TrashPath" type="Path2D" parent="." index="4"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="TrashSpawnLocation" type="PathFollow2D" parent="TrashPath" index="0"]

position = Vector2( -0.55011, -2.09686 )
rotation = 0.00521794
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[connection signal="timeout" from="TimerMob" to="." method="_on_TimerMob_timeout"]

[connection signal="timeout" from="TimerStylePoubelle" to="." method="_on_TimerStylePoubelle_timeout"]


